[project]
name = "between"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [

    "asgiref==3.8.1",
    "attrs==25.1.0",
    "Brotli==1.1.0",
    "certifi==2025.1.31",
    "cffi==1.17.1",
    "charset-normalizer==3.4.1",
    "cryptography==44.0.0",
    "dj-database-url==2.3.0",
    "Django==5.1.5",
    "django-allauth==65.3.1",
    "django-bootstrap5==24.3",
    "django-debug-toolbar==5.0.1",
    "gunicorn==23.0.0",
    "h11==0.14.0",
    "idna==3.10",
    "oauthlib==3.2.2",
    "outcome==1.3.0.post0",
    "packaging==24.2",
    "pillow==11.1.0",
    "psycopg2==2.9.10",
    "pycparser==2.22",
    "PyJWT==2.10.1",
    "PySocks==1.7.1",
    "python-decouple==3.8",
    "PyYAML==6.0.2",
    "requests==2.32.3",
    "requests-oauthlib==2.0.0",
    "resend==2.5.1",
    "selenium==4.27.1",
    "sentry-sdk==2.20.0",
    "sniffio==1.3.1",
    "sortedcontainers==2.4.0",
    "sqlparse==0.5.3",
    "trio==0.29.0",
    "trio-websocket==0.11.1",
    "typing_extensions==4.12.2",
    "urllib3==2.3.0",
    "websocket-client==1.8.0",
    "whitenoise==6.8.2",
    "wsproto==1.2.0"
]